<?xml version="1.0"?>
<package format="2">
    <name>fixposition_gnss_tf</name>
    <version>2.0.0</version>
    <description>Fixposition GNSS coordinates transformation</description>

    <maintainer email="info@fixposition.com">Fixposition AG</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
</package>
