<?xml version="1.0"?>
<package format="2">
    <name>fixposition_gnss_tf</name>
    <version>2.0.0</version>
    <description>Fixposition GNSS coordinates transformation</description>

    <maintainer email="info@fixposition.com">Fixposition AG</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <test_depend>ament_cmake_gtest</test_depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
